# vmlx

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: DSV4-PYTHON-AUDIT-2026-05-03.md  GENCONFIG-CHAT-SETTINGS-2026-05-16.md  JANGTQ_MPP_NAX_RUNTIME_INTEGRATION_2026_05_12.md  RELEASE_GATE_2026_05_13_COMPLETION_AUDIT.md  RELEASE_GATE_2026_05_13_ENGINE_CACHE_APP.md  ROTATING_KV_PREFIX_CACHE_PATCH.md  SESSION_2026_05_06_PYTHON_ENGINE_APP_AUDIT.md
docs/internal/: RELEASE_HARDENING_CHECKPOINT_2026_05_22.md
panel/: CHANGELOG.md  README.md  package-lock.json  package.json
panel/scripts/: build-and-install.sh  build-release-dmgs.sh  bundle-python.sh  live-chat-tools-reasoning-proof.mjs  release-gate-python-app.py  verify-bundled-python.sh
panel/src/: env.d.ts
panel/src/main/: api-gateway.ts  chat-override-policy.ts  database.ts  engine-manager.ts  index.ts  model-config-registry.ts  server.ts  sessions.ts  update-checker.ts
panel/src/main/ipc/: chat.ts  image.ts  imageGenerationState.ts  models.ts  sessions.ts
panel/src/main/tools/: executor.ts  registry.ts
panel/src/preload/: index.ts
panel/src/renderer/src/: App.tsx
panel/src/renderer/src/components/chat/: ChatInterface.tsx  ChatSettings.tsx  MessageBubble.tsx  ToolCallStatus.tsx
panel/src/renderer/src/components/image/: ImageModelPicker.tsx  ImageTab.tsx
panel/src/renderer/src/components/sessions/: CachePanel.tsx  CreateSession.tsx  DownloadTab.tsx  PerformancePanel.tsx  SessionConfigForm.tsx  SessionSettings.tsx
panel/src/renderer/src/i18n/locales/: en.json  es.json  ja.json  ko.json  zh.json
panel/src/shared/: cacheControlPolicy.ts  chatSettingsResetPolicy.ts  dsv4Env.ts  interleavedReasoning.ts  jangQuantization.ts  mcpConfigValidation.ts  mcpPolicy.ts
panel/tests/: api-gateway-ollama-behavior.test.ts  api-gateway-ollama.test.ts  audit-fixes.test.ts  cache-control-policy.test.ts  chat-override-policy.test.ts  chat-settings-compatibility.test.ts  chat-settings-reset-policy.test.ts  chat-ui.test.ts  comprehensive-audit.test.ts  dsv4-env.test.ts  dsv4-request-budget.test.ts  generation-defaults.test.ts  image-autodetect-paths.test.ts  image-generation-state.test.ts  interleaved-reasoning-segments.test.ts  jang-quantization-label.test.ts  mcp-gateway-routing.test.ts  mcp-policy.test.ts  model-config-registry.test.ts  request-builder.test.ts  settings-flow.test.ts  tool-auto-continue.test.ts  tool-media-followup.test.ts  tool-status-responsiveness.test.ts
tests/: test_anthropic_adapter.py  test_api_surface_contract.py  test_api_surface_parity.py  test_api_utils.py  test_audit_fixes.py  test_batching.py  test_cache_architecture_contract.py  test_cache_bypass.py  test_cli_commands.py  test_cross_matrix_audit_runner.py  test_current_regression_suite.py  test_dsml_tool_parser.py  test_dsv4_batch_generator_speed.py  test_dsv4_bundle_integrity.py  test_dsv4_contract_hardening.py  test_dsv4_paged_cache.py  test_engine_audit.py  test_hunyuan_tool_parser.py  test_image_api.py  test_jang_loader.py  test_max_output_context_contract.py  test_mcp_policy.py  test_memory_limits.py  test_mllm_cache.py  test_mllm_continuous_batching.py  test_mllm_message_serialization.py  test_mllm_scheduler_cache.py  test_model_artifact_format_contract.py  test_model_config_registry.py  test_model_family_detection_contract.py  test_multimodal_routing.py  test_native_mtp_autodetect.py  test_objective_proof_digest.py  test_ollama_adapter.py  test_omni_multimodal.py  test_parser_registry_contract.py  test_perf_prefill_loop.py  test_reasoning_modes.py  test_release_gate_python_app.py  test_release_regression_manifest.py  (+11 more)
tests/cross_matrix/: release_regression_manifest.py  run_api_surface_contract.py  run_cache_architecture_contract.py  run_current_regression_suite.py  run_decode_speed_gate.py  run_dsv4_long_context_gate.py  run_dsv4_responses_cache_gate.py  run_jang_model_compat_contract.py  run_max_output_context_contract.py  run_model_artifact_format_contract.py  run_model_family_detection_contract.py  run_native_mtp_contract.py  run_noheavy_api_cache_contract.py  run_packaged_integrity_contract.py  run_panel_tool_security_contract.py  run_parser_registry_contract.py  run_production_family_audit.py  run_release_regression_manifest.py  run_release_surface_contract.py  run_responses_long_tool_cache_gate.py  run_tool_call_contract.py  summarize_objective_proof.py
vmlx_engine/: __init__.py  cli.py  errors.py  mllm_batch_generator.py  mllm_scheduler.py  model_config_registry.py  model_configs.py  native_mtp.py  omni_multimodal.py  prefix_cache.py  request.py  scheduler.py  server.py
vmlx_engine/api/: anthropic_adapter.py  models.py  ollama_adapter.py  tool_calling.py  utils.py
vmlx_engine/engine/: batched.py  simple.py
vmlx_engine/loaders/: load_jangtq_dsv4.py
vmlx_engine/mcp/: manager.py
vmlx_engine/models/: mllm.py
vmlx_engine/patches/mlx_vlm_mtp/: qwen35_vl.py
vmlx_engine/reasoning/: deepseek_r1_parser.py
vmlx_engine/runtime_patches/: __init__.py
vmlx_engine/tool_parsers/: __init__.py  dsml_tool_parser.py  hunyuan_tool_parser.py
vmlx_engine/utils/: dsv4_batch_generator.py  jang_loader.py  mamba_cache.py  memory_limits.py  quant_shape_inference.py  single_batch_generator.py  ssm_companion_cache.py  tokenizer.py
