[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vmlx"
version = "1.5.40"
description = "MLX inference server for Apple Silicon — Text, Image, Video & Audio generation"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11,<3.15"
authors = [
    {name = "Jinho Jang", email = "eric@jangq.ai"}
]
keywords = ["llm", "mlx", "apple-silicon", "vllm", "inference", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mlx>=0.29.0",
    "mlx-lm>=0.31.3",  # 0.31.3 is the release-bundle floor for current JANG
                       # families: ArraysCache.lengths/advance, SequenceStateMachine,
                       # LRUPromptCache, native Gemma 4 text MoE, and the baseline
                       # model registry that vMLX patches with bailing_hybrid for
                       # Ling. NOTE: mlx-audio 0.4.1 hard-pins 0.31.1; audio support
                       # is opt-in via [audio] extra and not in the main bundle.
    "mlx-vlm>=0.4.3",  # Gemma 4 model class added in 0.4.3
    "transformers>=4.40.0",
    "tokenizers>=0.19.0",
    "huggingface-hub>=0.23.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "tabulate>=0.9.0",
    # Resource monitoring
    "psutil>=5.9.0",
    # Server
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    # MCP (Model Context Protocol) support
    "mcp>=1.0.0",
    # JSON Schema validation for structured output
    "jsonschema>=4.0.0",
    # Note: mlx-audio moved to optional [audio] deps due to mlx-lm version conflict
    "mlx-embeddings>=0.0.5",
    # JANG / MXTQ / JANGTQ runtime — REQUIRED, not optional. Every modern JANG
    # bundle (MiniMax-M2.7-JANGTQ-CRACK, Kimi K2.6, DSV4-Flash, Nemotron-Omni,
    # Mistral-Medium-3.5-JANGTQ, Laguna-XS.2-JANGTQ, etc.) needs jang_tools at
    # load time to dequant tq_packed weights. Without it the engine prints
    # 60+ ERROR lines per shard and the bundle loads with garbage weights.
    # User report 2026-04-30 with MiniMax-M2.7-JANGTQ-CRACK forced the
    # promotion from optional [mxtq] to a hard dependency. The PyPI package
    # is named `jang` (not `jang-tools` — that's the local repo dir name);
    # `import jang_tools` works because that's the package import name.
    "jang>=2.5.29",
    # Heavy multimodal stacks (Nemotron-Omni audio + image-gen + benchmark
    # video I/O) used to live here as hard deps to make `pip install vmlx`
    # serve every bundle out of the box. The Omni model dispatch in
    # `jang_tools.nemotron_omni_chat` lazy-imports torch/timm/einops/librosa/
    # soundfile only on the first multimodal request, image-gen reaches for
    # mflux only when `/v1/images/generations` is hit, and opencv is only
    # used by the `vmlx bench` video harness in `vmlx_engine/benchmark.py`.
    # Embedding deployments that serve text + image VLMs over chat completions
    # don't exercise any of those paths, so they are gated behind extras:
    #   vmlx[omni]       — Nemotron-Omni multimodal audio/video runtime
    #                      (torch, torchvision, soundfile, timm, einops, librosa)
    #   vmlx[image]      — mflux image generation (Flux, Z-Image, Qwen-Image-Edit)
    #   vmlx[benchmark]  — opencv video I/O for the `vmlx bench` CLI
    # `pip install vmlx[omni,image,benchmark]` restores the pre-1.5.41 layout.
]

[project.optional-dependencies]
ui = [
    "gradio>=4.0.0",
    "pytz>=2024.1",
]
# mxtq extra retained as a no-op alias for backward compat with anyone
# pinning `vmlx[mxtq]` in their requirements; the real install is now a
# hard dependency above so plain `pip install vmlx` works for all bundles.
mxtq = [
    "jang>=2.5.29",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
vllm = [
    # vllm pins torch<=2.6.0 which conflicts with mflux (torch>=2.8.0) when both installed
    "vllm>=0.4.0; python_version < '3.13'",
]
# Nemotron-3-Nano-Omni multimodal runtime. jang_tools lazy-imports torch /
# torchvision / soundfile / timm / einops / librosa on the first image/audio/
# video request to an Omni bundle; without these the request 500s with a
# ModuleNotFoundError. Embedding deployments that don't serve Omni bundles
# never trigger the load. Wheel adds ~700 MB (torch) + ~350 MB (torchvision)
# + ~50 MB (audio+vision helpers) plus transitive scipy/numba/llvmlite tail.
omni = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "soundfile>=0.12.0",
    "timm>=1.0.20",
    "einops>=0.8.0",
    "librosa>=0.10.0",
]
# Legacy alias for the old [vision] extra (torch + torchvision). Kept so
# `pip install vmlx[vision]` from older docs / requirements files still
# resolves to the same set, now via [omni].
vision = [
    "vmlx[omni]",
]
# Video I/O for the `vmlx bench` benchmark CLI. The benchmark module
# (vmlx_engine/benchmark.py) top-level-imports cv2 for VideoWriter /
# VideoCapture. Inference (vmlx serve) never reaches that file.
benchmark = [
    "opencv-python-headless>=4.8.0",
]
# Audio dependencies for TTS/STT (mlx-audio)
audio = [
    "mlx-audio>=0.2.9",
    "sounddevice>=0.4.0",
    "soundfile>=0.12.0",
    "scipy>=1.10.0",
    "numba>=0.57.0",
    "tiktoken>=0.5.0",
    "misaki[zh,ja]>=0.5.0",  # Chinese (zh) and Japanese (ja) support
    "spacy>=3.7.0",
    "num2words>=0.5.0",
    "loguru>=0.7.0",
    "phonemizer>=3.2.0",
    # Additional multilingual dependencies
    "ordered_set>=4.1.0",    # Required for Chinese TTS
    "cn2an>=0.5.0",          # Chinese number conversion
    "fugashi>=1.3.0",        # Japanese tokenizer
    "unidic-lite>=1.0.0",    # Japanese dictionary for fugashi
    "jieba>=0.42.0",         # Chinese word segmentation
]
# JANG / MXTQ runtime + conversion. The PyPI distribution name is
# `jang` (NOT `jang-tools` — that name doesn't exist on PyPI; the
# import name is `jang_tools` only because the wheel ships its
# package directory as `jang_tools/`). Provides both the runtime
# dequant codec and the conversion CLI; covers DSV4-Flash,
# MiniMax-M2.7-JANG_*, NemotronH-Omni-*, Laguna-XS.2-JANGTQ,
# Mistral-Medium-3.5-JANGTQ, Qwen 3.5/3.6-JANGTQ, MXTQ shards, and
# any other JANG-stamped bundle. Mirrors `mxtq` extra above
# (intentionally same pin) so `pip install vmlx[jang]` is a
# friendly alias. Pin tracks the hard dep above — bump in lockstep.
jang = [
    "jang>=2.5.29",
]
# Image generation dependencies (Flux, Z-Image-Turbo via mflux)
image = [
    "mflux>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/jjang-ai/vmlx"
Documentation = "https://github.com/jjang-ai/vmlx#readme"
Repository = "https://github.com/jjang-ai/vmlx"
Downloads = "https://github.com/jjang-ai/mlxstudio/releases"
Issues = "https://github.com/jjang-ai/vmlx/issues"

[project.entry-points."vllm.platform_plugins"]
mlx = "vmlx_engine.plugin:mlx_platform_plugin"

[project.scripts]
vmlx = "vmlx_engine.cli:main"
vmlx-serve = "vmlx_engine.cli:main"
vmlx-engine = "vmlx_engine.cli:main"
vmlx-engine-chat = "vmlx_engine.gradio_app:main"
vmlx-engine-bench = "vmlx_engine.benchmark:main"
vmlx-worker = "vmlx_engine.distributed.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vmlx_engine*"]

[tool.setuptools.package-data]
vmlx_engine = [
    "chat_templates/*.jinja",
    "config/*.yaml",
    "metal/*.metal",
]

[tool.poetry]
package-mode = false

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B905"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
